Add client app Dockerfile and update docker-compose.yml with frontend service